--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.prod.config.js",
     "postinstall": "npm run build",
-    "start": "node src/index.js"
+    "start": "node build/app.js",
+    "start-dev": "nodemon src/index.js"
   },
   "dependencies": {
     "express": "^4.14.0",
-    "react": "^15.3.1"
+    "lodash": "^4.15.0",
+    "pug": "^2.0.0-beta6",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -19,6 +23,12 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "chokidar": "^1.6.0",
-    "webpack": "^1.13.2"
+    "file-loader": "^0.9.0",
+    "nodemon": "^1.10.2",
+    "pug-loader": "^2.3.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.7.0",
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-node-externals": "^1.4.3"
   }
 }
